# ssl-vit-phenotyping

./: .gitignore  LAB_WEB_APP_ACCESS.md  README.md  pyproject.toml  tests.yml
.streamlit/: config.toml
apps/: ssl_patch_streamlit_app.py
data/ground_truth/: README.md  channel_metadata.template.csv  manifest.template.csv
demo/: generate_synthetic_benchmark.py  run_demo.sh
docs/: PHENOTYPING_SYNOPSIS.md  SSL_PATCH_TESTING.md  WEB_APP.md  advisor_clarifications.md  advisor_scope_update.md  agent_editing_contract.md  benchmark_outputs.md  data_contract.md  dinov3_experiment.md  future_project_direction.md  ground_truth_data.md  mask_source_strategy.md  model_rationale.md  procodes_ssl_analysis.md  qc_gates.md  ssl_scope.md  ssl_vs_autoencoders.md  subcell_lundberg_followup.md  workflow_steps.md
notebooks/: ssl_patch_interactive_review.ipynb
scripts/: remove_tracked_artifacts.sh  run_ssl_patch_test.py
scripts/fiji/: open_ssl_patch_test_patches.ijm
scripts/notebooks/: ssl_patch_interactive_review.py
src/lib/: __init__.py
src/lib/phenotype/: __init__.py  benchmarking.py  channel_metadata.py  data_contract.py  mask_source_qc.py  procode_analysis.py  ssl_cell_features.py  (+1 more)
src/manuscript/: __init__.py
src/ssl_vit_phenotyping.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_channel_metadata.py  test_data_contract.py  test_dinov3_wrapper.py  test_mask_source_qc.py  test_procode_analysis.py  test_qc_extensions.py  test_ssl_cell_features.py
workflow/config/: benchmark_features.example.yml  ssl_phenotype.example.yml
(+3 files in other folders)
