[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ssl-vit-phenotyping"
version = "0.1.0"
description = "Self-supervised ViT feature extraction for segmented cell phenotyping."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24,<2",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "tifffile>=2023.7.10",
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
