[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssl-vit-phenotyping"
version = "0.1.0"
description = "Self-supervised ViT feature extraction and QC benchmarking for CellProfiler/Brieflow phenotyping and ProCode optical pooled screens."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "torch",
  "tifffile",
  "tabulate",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
dinov3 = [
  "transformers>=4.45",
  "huggingface-hub>=0.24",
]

[project.scripts]
ssl-vit-benchmark = "lib.phenotype.benchmarking:main"
ssl-validate-data-contract = "lib.phenotype.data_contract:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "workflow"]
